// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HierarchicalMenu applies translations 1`] = `
<div>
  <ul
    className="list false"
  >
    <li
      className="item   item--parent"
    >
      <a
        className="link"
        href="#"
        onClick={[Function]}
      >
        <span
          className="label"
        >
          white
        </span>
         
        <span
          className="count"
        >
          10
        </span>
      </a>
      <ul
        className="list list--child"
      >
        <li
          className="item   "
        >
          <a
            className="link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="label"
            >
              white1
            </span>
             
            <span
              className="count"
            >
              3
            </span>
          </a>
        </li>
        <li
          className="item   "
        >
          <a
            className="link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="label"
            >
              white2
            </span>
             
            <span
              className="count"
            >
              4
            </span>
          </a>
        </li>
      </ul>
    </li>
    <li
      className="item   "
    >
      <a
        className="link"
        href="#"
        onClick={[Function]}
      >
        <span
          className="label"
        >
          black
        </span>
         
        <span
          className="count"
        >
          20
        </span>
      </a>
    </li>
    <li
      className="item   "
    >
      <a
        className="link"
        href="#"
        onClick={[Function]}
      >
        <span
          className="label"
        >
          blue
        </span>
         
        <span
          className="count"
        >
          30
        </span>
      </a>
    </li>
  </ul>
</div>
`;

exports[`HierarchicalMenu default hierarchical menu 1`] = `
<div>
  <ul
    className="list false"
  >
    <li
      className="item   item--parent"
    >
      <a
        className="link"
        href="#"
        onClick={[Function]}
      >
        <span
          className="label"
        >
          white
        </span>
         
        <span
          className="count"
        >
          10
        </span>
      </a>
      <ul
        className="list list--child"
      >
        <li
          className="item   "
        >
          <a
            className="link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="label"
            >
              white1
            </span>
             
            <span
              className="count"
            >
              3
            </span>
          </a>
        </li>
        <li
          className="item   "
        >
          <a
            className="link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="label"
            >
              white2
            </span>
             
            <span
              className="count"
            >
              4
            </span>
          </a>
        </li>
      </ul>
    </li>
    <li
      className="item   "
    >
      <a
        className="link"
        href="#"
        onClick={[Function]}
      >
        <span
          className="label"
        >
          black
        </span>
         
        <span
          className="count"
        >
          20
        </span>
      </a>
    </li>
  </ul>
  <button
    className="showMore false"
    disabled={false}
    onClick={[Function]}
  >
    Show more
  </button>
</div>
`;
